# techscan

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile.dev  LICENSE  README.md  aqua.yaml  docker-compose.yml
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/workflows/: codeql.yaml  release.yaml  test.yaml
src/: cli.rs  lib.rs  main.rs
src/config/: language_config.rs  mod.rs  reporter_format.rs
src/entity/: app_config.rs  error.rs  file.rs  language.rs  language_report.rs  language_scanner_options.rs  mod.rs  report.rs  result.rs  scanner_report.rs
src/service/: config_builder.rs  language_reporter.rs  language_scanner.rs  mod.rs  reporter.rs  scanner.rs  scanner_options.rs
tests/fixtures/cli/config/: complete.json  complete.toml  complete.yaml  reporter_only.yaml  tech_scan.json  tech_scan.json5  tech_scan.toml  tech_scan.yml
