[package]
name = "tech_scan"
description = "A tool for analyzing and visualizing technology stacks in codes."
version = "0.1.0"
edition = "2021"
rust-version = "1.82.0"
license = "MIT"
repository = "https://github.com/kimulaco/tech-scan"
readme = "README.md"

[[bin]]
name = "tech-scan"
path = "src/main.rs"

[dependencies]
clap = {version = "4.5.43", features = ["derive"]}
config = "0.15.14"
ignore = "0.4.23"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.142"
tabled = "0.20.0"
