[package]
name = "techscan"
description = "A tool for analyzing and visualizing technology stacks in codes."
version = "1.0.1"
edition = "2021"
rust-version = "1.82.0"
license = "MIT"
repository = "https://github.com/kimulaco/techscan"
readme = "README.md"

[[bin]]
name = "techscan"
path = "src/main.rs"

[lib]
name = "techscan"
path = "src/lib.rs"

[dependencies]
clap = {version = "4.5.43", features = ["derive"]}
config = "0.15.14"
ignore = "0.4.23"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.142"
tabled = "0.20.0"
